--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -161,6 +161,7 @@ by other means; the output can then be trusted to the extent that the obligation
 
 \internal{AB}{Is the unit set really denoted by $()$?}
 
+\internal{AB}{Did we forget dependent function space?}
 
 Explain the input language and its semantics.
 
