--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -157,6 +157,8 @@
 \newcommand{\isum}[4]{#1{:}#2+#3{:}#4}
 \newcommand{\iquot}[2]{#1{\bigm/} #2}
 \newcommand{\isubset}[3]{\{\,#1{:}#2\ |\ #3\,\}}
+\newcommand{\isunit}{1}
+\newcommand{\isvoid}{0}
 
 \newcommand{\iDefinition}[2]{\mathsf{Definition}\ #1\ :=\ #2.}
 \newcommand{\iParameter}[2]{\mathsf{Parameter}\ #1\ : #2.}
