--- a/doc/cie/rzbib.bib
+++ b/doc/cie/rzbib.bib
@@ -68,14 +68,6 @@
    volume =  88,
    pages =   {205-232}
 }
-		  
-@INPROCEEDINGS{harper+:popl90,
-   AUTHOR="Robert Harper and John C. Mitchell and Eugenio Moggi",
-   TITLE="{Higher-order Modules and the Phase Distinction}",
-   BOOKTITLE= "Proc. 17th ACM Symposium on Principles of 
-                  Programming Languages (POPL '90)",
-   YEAR=1990,
-   PAGES="341--354"}
 
 @BOOK{milner+:definition,
       AUTHOR="Robin Milner and Mads Tofte and Robert Harper
@@ -297,3 +289,10 @@ KEY="Peyton Jones"}
   pages =	 {1--11}
 }
 
+@INPROCEEDINGS{harper+:popl90,
+   AUTHOR="Robert Harper and John C. Mitchell and Eugenio Moggi",
+   TITLE="{Higher-order Modules and the Phase Distinction}",
+   BOOKTITLE= {Proceedings of the 17th ACM Symposium on Principles of 
+                  Programming Languages (POPL '90)},
+   YEAR=1990,
+   PAGES="341--354"}
