--- a/doc/cie/comparison.tex
+++ b/doc/cie/comparison.tex
@@ -19,10 +19,10 @@ conjunction-introduction rule has four cases, depending on whether the
 left and/or right propositions being proved are [almost?] negative, in which
 case the trivial contribution can be immediately discarded.
 
-\subsection{Models of Computability}
+\subsection{Other Models of Computability}
 \label{sec:models-of-computability}
-Most formulations of
-computable mathematics are based on realizability
+
+Most formulations of computable mathematics are based on realizability
 models~\cite{Bauer:00}, even though they were not initially developed,
 nor are they usually presented within the framework of realizability:
 Recursive Mathematics~\cite{ershov98:_handb_recur_mathem} is based on
@@ -38,6 +38,7 @@ theoretical studies of computability, rather than for practical
 programming. Since we want to emphasize the practical aspects of
 realizability, we have chosen instead an actual real-world programming
 language.
+
 
 %%% Local Variables: 
 %%% mode: latex
