--- a/doc/cie/logic.tex
+++ b/doc/cie/logic.tex
@@ -92,7 +92,7 @@ by other means; the output can then be trusted to the extent that the obligation
 		    & \iS \ |\ \iselect{\im}{\iS} &\mbox{Set names}\\
 		  | & \isunit\ |\ \iprod{\ix}{\is_1}{\is_2} &\mbox{Unit and cartesian product}\\
 		  | & \isum{\il_1}{\is_1}{\il_2}{\is_2} &\mbox{Void and disjoint union}\\
-		  | & \idarrow{\ix}{\is_1}{\is_2} & \mbox{Dependent function space}
+		  | & \idarrow{\ix}{\is_1}{\is_2} & \mbox{Dependent function space} \\
 		  | & \ilambda{\ix}{\is_1}{\is_2}\ |\ 
 		      \iapp{\is}{\ie} &\mbox{Dependent set and application}\\
 		  | & \iquot{\is}{\ipp} & \mbox{Set quotient by an equivalence relation}\\
