--- a/doc/cie/macros.tex
+++ b/doc/cie/macros.tex
@@ -235,8 +235,9 @@
 \newcommand{\otydef}[2]{\mathsf{type}\,#1=#2}
 \newcommand{\omodulespec}[2]{\mathsf{module}\,#1:#2}
 \newcommand{\osignatdef}[2]{\mathsf{module}\,\mathsf{type}\,#1=#2}
-\newcommand{\ospropspec}[2]{\mathsf{prop}\,#1:#2}
+\newcommand{\opropspec}[2]{\mathsf{prop}\,#1:#2}
 \newcommand{\oassertion}[2]{\mathsf{assertion}\,#1 : #2}
+\newcommand{\oA}{A} % Assertion name
 %%% Module type
 \newcommand{\omt}{\Sigma}
 \newcommand{\oMT}{S}
