--- a/doc/cie/translation.tex
+++ b/doc/cie/translation.tex
@@ -52,9 +52,16 @@ which requires a definition of a value~$x$ of type~$s$ which is in the
 support of~$s$. When $s$ is not a basic set, RZ computes the
 interpretation of the underlying type and support.
 
-Set and term definitions.
+Set and term definitions here.
 
-Predicates.
+In the realizability interpretation of constructive logic, a predicate
+$\phi$ on a modest sets $A$ is not just a subset of $\setOf{A}$, but
+rather a relationship $\rz$ between the values of an \emph{underlying
+  type} of realizers $\typeOf{\phi}$ and $\setOf{A}$. For $v \in
+\values{\typeOf{\phi}}$ and $t \in \setOf{A}$ we write $v \rz \phi(t)$
+when $v$ and $x$ are related. This can be read as ``$v$ realizes the
+fact that $\phi(t)$ holds.'' (Take further explanation from CLASE
+paper here.)
 
 
 %%% Local Variables: 
